samples/_failures_safe/1761460781_c528d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f7a22fa1.c: In function ‘dijkstra_shortest_path’:
./samples/SAFE/__tmp_f7a22fa1.c:160:12: error: missing terminating " character
  160 |     printf("Short
      |            ^~~~~~
./samples/SAFE/__tmp_f7a22fa1.c:160:5: error: expected expression at end of input
  160 |     printf("Short
      |     ^~~~~~
./samples/SAFE/__tmp_f7a22fa1.c:160:5: error: expected declaration or statement at end of input
